# WoW-AddonManager

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  Makefile  README.md  WoW-Addon-Manager.hpp.in  parsingTest.html  settings.txt  tempfile.html
resources/: resources.qrc
src/: Addon.cpp  Addon.hpp  Connection.cpp  Connection.h  Core.cpp  Core.hpp  GUI.cpp  GUI.hpp  HTMLParser.cpp  HTMLParser.hpp  Logger.cpp  Logger.hpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/addonsources/: addonsource.hpp  curse.cpp  curse.hpp
tests/: ReturnValue.cpp  ReturnValue.hpp  tests.cpp
