CMAKE_MINIMUM_REQUIRED (VERSION 2.8.12)

PROJECT (WoW-Addon-Manager)

FIND_PACKAGE(PkgConfig REQUIRED)
PKG_CHECK_MODULES(GTK3 REQUIRED gtk+-3.0)
FIND_PACKAGE(CURL REQUIRED)

SET (CMAKE_THREAD_PREFER_PTHREAD ON)
FIND_PACKAGE(Threads REQUIRED)

SET (PROJECT_VERSION_MAJOR 0)
SET (PROJECT_VERSION_MINOR 1)
SET (PROJECT_VERSION_HOTFIX 0)

SET (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -g")

SET (PROJECT_SOURCE_DIR src/)

CONFIGURE_FILE (
	${PROJECT_NAME}.hpp.in
	${PROJECT_BINARY_DIR}/generated/${PROJECT_NAME}.hpp
)

INCLUDE_DIRECTORIES (
	${PROJECT_SOURCE_DIR}
	${CURL_INCLUDE_DIR}
	${GTK3_INCLUDE_DIRS}
	${PROJECT_BINARY_DIR}/generated/
)

LINK_DIRECTORIES (
	${GTK3_LIBRARY_DIRS}	
	${CURL_LIBRARY_DIRS}
)

SET (PROJECT_SRCS
	${PROJECT_SOURCE_DIR}/main.cpp
	${PROJECT_SOURCE_DIR}/Addon.cpp
	${PROJECT_SOURCE_DIR}/Connection.cpp
	${PROJECT_SOURCE_DIR}/Core.cpp
	${PROJECT_SOURCE_DIR}/GUI.cpp
	${PROJECT_SOURCE_DIR}/HTMLParser.cpp
)

ADD_EXECUTABLE (${PROJECT_NAME} ${PROJECT_SRCS})


TARGET_LINK_LIBRARIES(${PROJECT_NAME}
			${GTK3_LIBRARIES}
			${CURL_LIBRARIES}
			${CMAKE_THREAD_LIBS_INIT}
)

ADD_CUSTOM_TARGET("run")
ADD_CUSTOM_COMMAND(TARGET run COMMAND ./${PROJECT_NAME} COMMENT "Executes the binary")
