CMAKE_MINIMUM_REQUIRED (VERSION 2.8.12)

PROJECT (WoW-Addon-Manager)

SET (PROJECT_VERSION_MAJOR 0)
SET (PROJECT_VERSION_MINOR 1)
SET (PROJECT_VERSION_HOTFIX 0)

SET (PROJECT_SOURCE_DIR src/)
# Automatically add the current source- and build directories to the include path.
set (CMAKE_INCLUDE_CURRENT_DIR ON)

SET (CMAKE_THREAD_PREFER_PTHREAD ON)
FIND_PACKAGE(Threads REQUIRED)

FIND_PACKAGE(PkgConfig REQUIRED)
PKG_CHECK_MODULES(GTK3 REQUIRED gtk+-3.0)

FIND_PACKAGE(CURL REQUIRED)

FIND_PACKAGE(Qt5 REQUIRED Core Widgets Gui)
SET(MAINWINDOW_UI ${PROJECT_SOURCE_DIR}/mainwindow.ui)
SET(MAINWINDOW_SRC ${PROJECT_SOURCE_DIR}/mainwindow.cpp)
SET(MAINWINDOW_HDR ${PROJECT_SOURCE_DIR}/mainwindow.h)
QT5_WRAP_UI(MAINWINDOW_WRAP ${MAINWINDOW_UI})
QT5_WRAP_CPP(MAINWINDOW_MOC ${MAINWINDOW_HDR})

SET (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -g")

CONFIGURE_FILE (
	${PROJECT_NAME}.hpp.in
	${PROJECT_BINARY_DIR}/generated/${PROJECT_NAME}.hpp
)

INCLUDE_DIRECTORIES (
	${PROJECT_SOURCE_DIR}
	${CURL_INCLUDE_DIR}
	${GTK3_INCLUDE_DIRS}
	${PROJECT_BINARY_DIR}/generated/
)

LINK_DIRECTORIES (
	${GTK3_LIBRARY_DIRS}	
	${CURL_LIBRARY_DIRS}
)

SET (PROJECT_SRCS
	${PROJECT_SOURCE_DIR}/main.cpp
	${PROJECT_SOURCE_DIR}/Addon.cpp
	${PROJECT_SOURCE_DIR}/Connection.cpp
	${PROJECT_SOURCE_DIR}/Core.cpp
	${PROJECT_SOURCE_DIR}/GUI.cpp
	${PROJECT_SOURCE_DIR}/HTMLParser.cpp
)

ADD_EXECUTABLE (${PROJECT_NAME}
        ${PROJECT_SRCS}
        ${MAINWINDOW_SRC}
        ${MAINWINDOW_WRAP}
        ${MAINWINDOW_MOC}
)


TARGET_LINK_LIBRARIES(${PROJECT_NAME}
        ${GTK3_LIBRARIES}
        ${CURL_LIBRARIES}
        ${CMAKE_THREAD_LIBS_INIT}
		Qt5::Core
		Qt5::Widgets
		Qt5::Gui
)

ADD_CUSTOM_TARGET("run")
ADD_CUSTOM_COMMAND(TARGET run COMMAND ./${PROJECT_NAME} gui COMMENT "Executes the binary")
